hdp add restart